2010-03-10  Sancho Lerena <slerena@artica.es>

	Merged bugfix from trunk:

	 * godmode/users/user_list.php: Fixed bug which doesn't allow to
        delete users.
        
        * godmode/users/configure_user.php: Fixed bug with profile assigment
        (Mixed the current user and selected user).

2010-03-06  SAncho Lerena  <slerena@artica.es>

	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Missing SQL for migration
	which affets incident system

        * extensions/dbmanager.php,
        extensions/plugin_registration.php
        extensions/pandora_logs.php: Added missing ACL checks.

2010-03-05  Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb_data.sql: changed some the descriptions text of table
	type modules. 

2010-03-05  Miguel de Dios  <miguel.dedios@artica.es>

	Merged from trunk:
	
	* godmode/agentes/module_manager_editor_common.php: fix the type for when
	ajax load by form editor in modules policies.
	
2010-02-25  Sancho Lerena <slerena@artica.es>

	* include/functions_ui.php: Show default actions in alerts.

	* godmode/alerts/alert_list.php: Show default actions in alerts.

	* include/functions_reporting.php: Fixed bad count of Unknown modules.

	* godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/configure_alert_action.php,
	godmode/alerts/alert_actions.php: Show/Edit group for templates and actions.

2010-02-22  Miguel de Dios  <miguel.dedios@artica.es>

	Merged from trunk:
	
	* include/functions_alerts.php: fix when try delete only the alerts from
	alert policies form. 

2010-02-20  Sancho Lerena <slerena@artica.es>

        * godmode/setup/setup.php: Fixed bug #2952636, thanks Junichi for the 
        patch.


2010-02-20  Sancho Lerena <slerena@artica.es>

	* include/gettext.php: Applied patch to solve problem in 64bit systems
	Thanks Junichi!.

2010-02-18  Raul Mateos <raulofpandora@gmail.com>
	* extensions/module_groups.php: Better description text. Changed font
        colour.
